--- a/study logs/PART_1/intro_to_language_modeling.ipynb
+++ b/study logs/PART_1/intro_to_language_modeling.ipynb
@@ -19,10 +19,10 @@
           "languageId": "plaintext"
         },
         "id": "aac52674",
-        "outputId": "dbac7663-f5f1-4dc6-ac5e-95c0163be4c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dbac7663-f5f1-4dc6-ac5e-95c0163be4c1"
       },
       "outputs": [
         {
@@ -1316,11 +1316,11 @@
         "print(row_sum.shape)"
       ],
       "metadata": {
-        "id": "6z4gApyelZ7n",
-        "outputId": "24af4f57-c1bb-4331-ff79-a9476b9df47b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6z4gApyelZ7n",
+        "outputId": "24af4f57-c1bb-4331-ff79-a9476b9df47b"
       },
       "id": "6z4gApyelZ7n",
       "execution_count": 67,
@@ -1371,11 +1371,11 @@
         "N.sum(1).shape"
       ],
       "metadata": {
-        "id": "w7WUKll07UXo",
-        "outputId": "174c1238-648b-481d-d31b-9c8271a4b95e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w7WUKll07UXo",
+        "outputId": "174c1238-648b-481d-d31b-9c8271a4b95e"
       },
       "id": "w7WUKll07UXo",
       "execution_count": 73,
@@ -1411,11 +1411,11 @@
         "b[0].sum()"
       ],
       "metadata": {
-        "id": "9UjDoTYRFg3u",
-        "outputId": "21465e94-e1fa-45bc-908a-2f748a3ee9e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9UjDoTYRFg3u",
+        "outputId": "21465e94-e1fa-45bc-908a-2f748a3ee9e0"
       },
       "id": "9UjDoTYRFg3u",
       "execution_count": 77,
@@ -1474,10 +1474,10 @@
         "a = N.float()\n",
         "b = a / a.sum(1)\n",
         "```\n",
-        "But unexpectedly the sum, which actually should result to 1 (the sum of probabilities = 1), won't.\n",
+        "But unexpectedly the sum, which actually should result to 1 (the sum of probabilities = 1), doesn't. This is because of column wise sum instead of row.\n",
         "```python\n",
         "b[0].sum()\n",
-        ">> tensor(7.0225)\n",
+        ">>> tensor(7.0225)\n",
         "```\n"
       ],
       "metadata": {
@@ -1510,11 +1510,11 @@
         ""
       ],
       "metadata": {
-        "id": "Fpsa5uD4w9St",
-        "outputId": "43fc684d-d13f-4f15-c3e3-160e6b1d3537",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fpsa5uD4w9St",
+        "outputId": "43fc684d-d13f-4f15-c3e3-160e6b1d3537"
       },
       "id": "Fpsa5uD4w9St",
       "execution_count": 79,
@@ -1568,11 +1568,11 @@
         "    print(f'{ch1}{ch2}: {prob:.4f}')"
       ],
       "metadata": {
-        "id": "aTilsW195mIR",
-        "outputId": "2b556221-7bfb-4754-f811-26de5abf46a3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aTilsW195mIR",
+        "outputId": "2b556221-7bfb-4754-f811-26de5abf46a3"
       },
       "id": "aTilsW195mIR",
       "execution_count": 83,
@@ -1623,11 +1623,11 @@
         "1 / 27.0"
       ],
       "metadata": {
-        "id": "HEQAyzQ4LXR2",
-        "outputId": "df2ffabe-00c6-42ef-bdb5-2bbe7f449398",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HEQAyzQ4LXR2",
+        "outputId": "df2ffabe-00c6-42ef-bdb5-2bbe7f449398"
       },
       "id": "HEQAyzQ4LXR2",
       "execution_count": 84,
@@ -1702,11 +1702,11 @@
         "print(f\"{log_likelihood=}\")"
       ],
       "metadata": {
-        "id": "O6KNaj9WIT8Q",
-        "outputId": "c07ecddb-4c15-4bfc-aa97-528e4d93a452",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "O6KNaj9WIT8Q",
+        "outputId": "c07ecddb-4c15-4bfc-aa97-528e4d93a452"
       },
       "id": "O6KNaj9WIT8Q",
       "execution_count": 88,
@@ -1790,11 +1790,11 @@
         "print(f\"{avg_neg_log_likelihood=}\")"
       ],
       "metadata": {
-        "id": "-Na1AV3bP6-a",
-        "outputId": "666374c6-ca24-4d1a-fcb2-9ad858a60629",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-Na1AV3bP6-a",
+        "outputId": "666374c6-ca24-4d1a-fcb2-9ad858a60629"
       },
       "id": "-Na1AV3bP6-a",
       "execution_count": 92,
@@ -1850,11 +1850,11 @@
         "print(f\"{avg_neg_log_likelihood=}\")"
       ],
       "metadata": {
-        "id": "LkUHUc_9R-mj",
-        "outputId": "1f21c263-3ed0-4963-9204-8a0918a8ed18",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LkUHUc_9R-mj",
+        "outputId": "1f21c263-3ed0-4963-9204-8a0918a8ed18"
       },
       "id": "LkUHUc_9R-mj",
       "execution_count": 98,
@@ -1917,11 +1917,11 @@
         "print(f\"{avg_neg_log_likelihood=}\")"
       ],
       "metadata": {
-        "id": "yUm4DklriIRs",
-        "outputId": "8c89706b-4f81-4317-84a2-69769e89ba75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yUm4DklriIRs",
+        "outputId": "8c89706b-4f81-4317-84a2-69769e89ba75"
       },
       "id": "yUm4DklriIRs",
       "execution_count": 99,
@@ -1991,11 +1991,11 @@
         ""
       ],
       "metadata": {
-        "id": "t5G_cCQbjH69",
-        "outputId": "89a8f9f3-6b37-4e7b-f3dd-f5dbde432de1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "t5G_cCQbjH69",
+        "outputId": "89a8f9f3-6b37-4e7b-f3dd-f5dbde432de1"
       },
       "id": "t5G_cCQbjH69",
       "execution_count": 100,
@@ -2042,11 +2042,11 @@
         "print(f\"{avg_neg_log_likelihood=}\")"
       ],
       "metadata": {
-        "id": "PqubkEw2lI7k",
-        "outputId": "44a9ffd1-428d-43b3-b21f-03b9f65c7389",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PqubkEw2lI7k",
+        "outputId": "44a9ffd1-428d-43b3-b21f-03b9f65c7389"
       },
       "id": "PqubkEw2lI7k",
       "execution_count": 102,
