--- a/study logs/PART_1/intro_to_language_modeling.ipynb
+++ b/study logs/PART_1/intro_to_language_modeling.ipynb
@@ -2108,10 +2108,10 @@
       ],
       "metadata": {
         "id": "iaQbTSc4lLic",
-        "outputId": "ffd902c2-f67a-4b98-cc5c-2969c489c1e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ffd902c2-f67a-4b98-cc5c-2969c489c1e3"
       },
       "id": "iaQbTSc4lLic",
       "execution_count": 114,
@@ -2135,11 +2135,11 @@
         "inputs"
       ],
       "metadata": {
-        "id": "wsVMcl50qZMP",
-        "outputId": "b1be5cde-d850-47df-abe5-15c61b51081b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wsVMcl50qZMP",
+        "outputId": "b1be5cde-d850-47df-abe5-15c61b51081b"
       },
       "id": "wsVMcl50qZMP",
       "execution_count": 115,
@@ -2162,11 +2162,11 @@
         "labels"
       ],
       "metadata": {
-        "id": "pF_YdApaqd7U",
-        "outputId": "ae610eb6-9b84-437d-e5a9-424d1bc39996",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pF_YdApaqd7U",
+        "outputId": "ae610eb6-9b84-437d-e5a9-424d1bc39996"
       },
       "id": "pF_YdApaqd7U",
       "execution_count": 116,
@@ -2219,11 +2219,11 @@
         "input_encoded"
       ],
       "metadata": {
-        "id": "F4MSZWpiyX9U",
-        "outputId": "52fbf808-e5d5-4179-f17b-be872c09fe8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F4MSZWpiyX9U",
+        "outputId": "52fbf808-e5d5-4179-f17b-be872c09fe8e"
       },
       "id": "F4MSZWpiyX9U",
       "execution_count": 72,
@@ -2255,11 +2255,11 @@
         "input_encoded.dtype"
       ],
       "metadata": {
-        "id": "4kb92een3IPt",
-        "outputId": "0816a955-5232-46c7-a38f-2acd960ce862",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4kb92een3IPt",
+        "outputId": "0816a955-5232-46c7-a38f-2acd960ce862"
       },
       "id": "4kb92een3IPt",
       "execution_count": 73,
@@ -2367,11 +2367,11 @@
         "(input_encoded @ W).exp()"
       ],
       "metadata": {
-        "id": "PKVeCA0eDOfc",
-        "outputId": "a37b61a4-5685-4ccc-9052-6ac0cb1e5d6c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PKVeCA0eDOfc",
+        "outputId": "a37b61a4-5685-4ccc-9052-6ac0cb1e5d6c"
       },
       "id": "PKVeCA0eDOfc",
       "execution_count": 106,
@@ -2446,12 +2446,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "9jwUuSJn9vd6",
-        "outputId": "5995b84b-e74e-4efe-d9f6-3cfde6e18f6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 487
-        }
+        },
+        "id": "9jwUuSJn9vd6",
+        "outputId": "5995b84b-e74e-4efe-d9f6-3cfde6e18f6a"
       },
       "id": "9jwUuSJn9vd6",
       "execution_count": 89,
@@ -2487,11 +2487,11 @@
         "probs"
       ],
       "metadata": {
-        "id": "V8KKwve26PZs",
-        "outputId": "d503d1f7-5fee-4a08-f4f9-961e0ef98a10",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "V8KKwve26PZs",
+        "outputId": "d503d1f7-5fee-4a08-f4f9-961e0ef98a10"
       },
       "id": "V8KKwve26PZs",
       "execution_count": 108,
@@ -2530,11 +2530,11 @@
         "print(probs[0].sum())"
       ],
       "metadata": {
-        "id": "vy0jbcwpC2iv",
-        "outputId": "99b229f1-f8b7-4120-cc96-1bbf9eccfa3b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vy0jbcwpC2iv",
+        "outputId": "99b229f1-f8b7-4120-cc96-1bbf9eccfa3b"
       },
       "id": "vy0jbcwpC2iv",
       "execution_count": 112,
@@ -2648,11 +2648,11 @@
         "print(f'Average negative log-likelihood: {neg_log_likelihood.mean()}')"
       ],
       "metadata": {
-        "id": "VbQ03TFKEiGG",
-        "outputId": "2e20a92b-56e3-4847-f4d6-53c68d3692d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VbQ03TFKEiGG",
+        "outputId": "2e20a92b-56e3-4847-f4d6-53c68d3692d2"
       },
       "id": "VbQ03TFKEiGG",
       "execution_count": 122,
@@ -2758,11 +2758,11 @@
         "inputs"
       ],
       "metadata": {
-        "id": "U-TlvUvxOj3b",
-        "outputId": "1fe13339-fb34-4b53-fbb9-9e9dff011201",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "U-TlvUvxOj3b",
+        "outputId": "1fe13339-fb34-4b53-fbb9-9e9dff011201"
       },
       "id": "U-TlvUvxOj3b",
       "execution_count": 127,
@@ -2785,11 +2785,11 @@
         "labels"
       ],
       "metadata": {
-        "id": "qgwjtH5GOk9A",
-        "outputId": "acc49490-3ea8-4387-e351-78a05a059eb9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qgwjtH5GOk9A",
+        "outputId": "acc49490-3ea8-4387-e351-78a05a059eb9"
       },
       "id": "qgwjtH5GOk9A",
       "execution_count": 128,
@@ -2832,11 +2832,11 @@
         "print(probs.shape)"
       ],
       "metadata": {
-        "id": "8Dj8pqIgOX65",
-        "outputId": "c3dedfbd-8075-453f-c550-e610b0bca704",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8Dj8pqIgOX65",
+        "outputId": "c3dedfbd-8075-453f-c550-e610b0bca704"
       },
       "id": "8Dj8pqIgOX65",
       "execution_count": 129,
@@ -2871,11 +2871,11 @@
         "probs[0, 5]"
       ],
       "metadata": {
-        "id": "vKqimlpoOg0o",
-        "outputId": "2831e8d2-7210-4eaa-b4d0-2a4352fe10c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vKqimlpoOg0o",
+        "outputId": "2831e8d2-7210-4eaa-b4d0-2a4352fe10c9"
       },
       "id": "vKqimlpoOg0o",
       "execution_count": 132,
@@ -2942,11 +2942,11 @@
         "loss"
       ],
       "metadata": {
-        "id": "e7IGXYiPPGj4",
-        "outputId": "66b6fe79-74b4-43ec-a2f4-a8365d1a22f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e7IGXYiPPGj4",
+        "outputId": "66b6fe79-74b4-43ec-a2f4-a8365d1a22f5"
       },
       "id": "e7IGXYiPPGj4",
       "execution_count": 139,
@@ -2994,11 +2994,11 @@
         "W.shape, W.grad.shape"
       ],
       "metadata": {
-        "id": "aLFHoUoCQ2L6",
-        "outputId": "1822dd37-106e-4a4a-fbb0-d85eab1cc1b6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aLFHoUoCQ2L6",
+        "outputId": "1822dd37-106e-4a4a-fbb0-d85eab1cc1b6"
       },
       "id": "aLFHoUoCQ2L6",
       "execution_count": 143,
@@ -3041,11 +3041,11 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "mU6sqvapT1gh",
-        "outputId": "5f665579-df92-4483-a9ab-a1b56568ae25",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mU6sqvapT1gh",
+        "outputId": "5f665579-df92-4483-a9ab-a1b56568ae25"
       },
       "id": "mU6sqvapT1gh",
       "execution_count": 145,
@@ -3248,11 +3248,11 @@
         "loss"
       ],
       "metadata": {
-        "id": "RDeCPwCQT2eR",
-        "outputId": "db8ad21c-49cb-4c74-aac7-acc22421e916",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RDeCPwCQT2eR",
+        "outputId": "db8ad21c-49cb-4c74-aac7-acc22421e916"
       },
       "id": "RDeCPwCQT2eR",
       "execution_count": 146,
@@ -3326,11 +3326,11 @@
         "W = torch.randn((27, 27), generator=g, requires_grad=True)\n"
       ],
       "metadata": {
-        "id": "ZgP_tgKmU8WC",
-        "outputId": "73d49cfc-8a60-4e33-8a32-59bb0fc06b0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZgP_tgKmU8WC",
+        "outputId": "73d49cfc-8a60-4e33-8a32-59bb0fc06b0c"
       },
       "id": "ZgP_tgKmU8WC",
       "execution_count": 152,
@@ -3358,7 +3358,7 @@
         "  counts = logits.exp()\n",
         "  probs = counts / counts.sum(1, keepdims=True)\n",
         "  loss = -probs[torch.arange(num_inputs), labels].log().mean()\n",
-        "  print(f'Iteration {k+1}: {loss}')\n",
+        "  # print(f'Iteration {k+1}: {loss}')\n",
         "\n",
         "  # BACKWARD PASS\n",
         "  W.grad = None\n",
@@ -3368,122 +3368,21 @@
         "  W.data += -0.1 * W.grad"
       ],
       "metadata": {
-        "id": "lHWDRf25ViCr",
-        "outputId": "e7258e0f-8f64-4712-aed2-63862f14511f",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "lHWDRf25ViCr"
       },
       "id": "lHWDRf25ViCr",
-      "execution_count": 154,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Iteration 1: 3.672508716583252\n",
-            "Iteration 2: 3.6716909408569336\n",
-            "Iteration 3: 3.6708743572235107\n",
-            "Iteration 4: 3.670058250427246\n",
-            "Iteration 5: 3.669243335723877\n",
-            "Iteration 6: 3.668429136276245\n",
-            "Iteration 7: 3.6676158905029297\n",
-            "Iteration 8: 3.6668035984039307\n",
-            "Iteration 9: 3.665992021560669\n",
-            "Iteration 10: 3.6651811599731445\n",
-            "Iteration 11: 3.6643714904785156\n",
-            "Iteration 12: 3.663562297821045\n",
-            "Iteration 13: 3.6627542972564697\n",
-            "Iteration 14: 3.6619467735290527\n",
-            "Iteration 15: 3.6611406803131104\n",
-            "Iteration 16: 3.660335063934326\n",
-            "Iteration 17: 3.6595304012298584\n",
-            "Iteration 18: 3.658726453781128\n",
-            "Iteration 19: 3.6579232215881348\n",
-            "Iteration 20: 3.657121181488037\n",
-            "Iteration 21: 3.6563198566436768\n",
-            "Iteration 22: 3.6555190086364746\n",
-            "Iteration 23: 3.6547200679779053\n",
-            "Iteration 24: 3.653921127319336\n",
-            "Iteration 25: 3.653122901916504\n",
-            "Iteration 26: 3.6523256301879883\n",
-            "Iteration 27: 3.651529312133789\n",
-            "Iteration 28: 3.6507341861724854\n",
-            "Iteration 29: 3.64993953704834\n",
-            "Iteration 30: 3.6491458415985107\n",
-            "Iteration 31: 3.6483523845672607\n",
-            "Iteration 32: 3.6475603580474854\n",
-            "Iteration 33: 3.6467690467834473\n",
-            "Iteration 34: 3.6459786891937256\n",
-            "Iteration 35: 3.645189046859741\n",
-            "Iteration 36: 3.644400119781494\n",
-            "Iteration 37: 3.6436119079589844\n",
-            "Iteration 38: 3.642824649810791\n",
-            "Iteration 39: 3.642038345336914\n",
-            "Iteration 40: 3.6412532329559326\n",
-            "Iteration 41: 3.6404683589935303\n",
-            "Iteration 42: 3.6396844387054443\n",
-            "Iteration 43: 3.6389012336730957\n",
-            "Iteration 44: 3.6381189823150635\n",
-            "Iteration 45: 3.6373374462127686\n",
-            "Iteration 46: 3.636556625366211\n",
-            "Iteration 47: 3.635776996612549\n",
-            "Iteration 48: 3.634998321533203\n",
-            "Iteration 49: 3.6342198848724365\n",
-            "Iteration 50: 3.633441925048828\n",
-            "Iteration 51: 3.6326656341552734\n",
-            "Iteration 52: 3.631889820098877\n",
-            "Iteration 53: 3.6311147212982178\n",
-            "Iteration 54: 3.630340576171875\n",
-            "Iteration 55: 3.6295671463012695\n",
-            "Iteration 56: 3.6287944316864014\n",
-            "Iteration 57: 3.6280226707458496\n",
-            "Iteration 58: 3.627251625061035\n",
-            "Iteration 59: 3.626481294631958\n",
-            "Iteration 60: 3.6257119178771973\n",
-            "Iteration 61: 3.624943494796753\n",
-            "Iteration 62: 3.6241753101348877\n",
-            "Iteration 63: 3.623408555984497\n",
-            "Iteration 64: 3.6226420402526855\n",
-            "Iteration 65: 3.6218764781951904\n",
-            "Iteration 66: 3.6211118698120117\n",
-            "Iteration 67: 3.6203484535217285\n",
-            "Iteration 68: 3.6195850372314453\n",
-            "Iteration 69: 3.6188228130340576\n",
-            "Iteration 70: 3.618060827255249\n",
-            "Iteration 71: 3.617300510406494\n",
-            "Iteration 72: 3.61653995513916\n",
-            "Iteration 73: 3.61578106880188\n",
-            "Iteration 74: 3.615022897720337\n",
-            "Iteration 75: 3.6142654418945312\n",
-            "Iteration 76: 3.613508462905884\n",
-            "Iteration 77: 3.6127521991729736\n",
-            "Iteration 78: 3.61199688911438\n",
-            "Iteration 79: 3.6112420558929443\n",
-            "Iteration 80: 3.6104884147644043\n",
-            "Iteration 81: 3.6097357273101807\n",
-            "Iteration 82: 3.608983039855957\n",
-            "Iteration 83: 3.608231782913208\n",
-            "Iteration 84: 3.6074812412261963\n",
-            "Iteration 85: 3.6067311763763428\n",
-            "Iteration 86: 3.6059818267822266\n",
-            "Iteration 87: 3.6052334308624268\n",
-            "Iteration 88: 3.6044859886169434\n",
-            "Iteration 89: 3.603739023208618\n",
-            "Iteration 90: 3.6029930114746094\n",
-            "Iteration 91: 3.6022472381591797\n",
-            "Iteration 92: 3.6015028953552246\n",
-            "Iteration 93: 3.6007590293884277\n",
-            "Iteration 94: 3.6000161170959473\n",
-            "Iteration 95: 3.599273681640625\n",
-            "Iteration 96: 3.598532199859619\n",
-            "Iteration 97: 3.5977909564971924\n",
-            "Iteration 98: 3.597050905227661\n",
-            "Iteration 99: 3.596311569213867\n",
-            "Iteration 100: 3.5955731868743896\n"
-          ]
-        }
-      ]
+      "execution_count": 155,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To be continued: https://youtu.be/PaCmpygFfXo?t=6548"
+      ],
+      "metadata": {
+        "id": "BZv4sG8br1O4"
+      },
+      "id": "BZv4sG8br1O4"
     },
     {
       "cell_type": "code",
