--- a/study logs/PART_2/tokenization.ipynb
+++ b/study logs/PART_2/tokenization.ipynb
@@ -5,19 +5,53 @@
    "id": "9a78cbf1",
    "metadata": {},
    "source": [
-    "# Tokenization"
+    "# [Tokenization](https://www.youtube.com/watch?v=zduSFxRajkE)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f82bd041",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d29f84b8",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77eef414",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "python-intro",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
