--- a/study logs/PART_2/tokenization.ipynb
+++ b/study logs/PART_2/tokenization.ipynb
@@ -535,11 +535,11 @@
         "print(decode_text(encode_text(\"hello world\")))"
       ],
       "metadata": {
-        "id": "0ZdHer86fq9o",
-        "outputId": "c6619c07-30af-4f74-d9f1-4edbda38a60c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0ZdHer86fq9o",
+        "outputId": "c6619c07-30af-4f74-d9f1-4edbda38a60c"
       },
       "id": "0ZdHer86fq9o",
       "execution_count": 81,
@@ -560,11 +560,11 @@
         "a"
       ],
       "metadata": {
-        "id": "C6UNRWyLhD_G",
-        "outputId": "02adcbf0-3964-4583-d822-fe950b3f8e2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "C6UNRWyLhD_G",
+        "outputId": "02adcbf0-3964-4583-d822-fe950b3f8e2c"
       },
       "id": "C6UNRWyLhD_G",
       "execution_count": 79,
@@ -587,11 +587,11 @@
         "b\"\".join(vocab[idx] for idx in a)"
       ],
       "metadata": {
-        "id": "bgDXm1B1hPtG",
-        "outputId": "60f91493-a36e-429e-b0f9-21a3a1c4667d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bgDXm1B1hPtG",
+        "outputId": "60f91493-a36e-429e-b0f9-21a3a1c4667d"
       },
       "id": "bgDXm1B1hPtG",
       "execution_count": 80,
@@ -619,12 +619,12 @@
         "new_text"
       ],
       "metadata": {
-        "id": "X96G4RUNhqRm",
-        "outputId": "5f750d6a-4e4f-499d-cc1e-4289b1b6d06a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "id": "X96G4RUNhqRm",
+        "outputId": "5f750d6a-4e4f-499d-cc1e-4289b1b6d06a"
       },
       "id": "X96G4RUNhqRm",
       "execution_count": 82,
@@ -652,11 +652,11 @@
         "print(new_text == dec_new_text)"
       ],
       "metadata": {
-        "id": "xpsi-pK6mdj4",
-        "outputId": "8956056c-7fc6-4c81-a571-ae663cf251c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xpsi-pK6mdj4",
+        "outputId": "8956056c-7fc6-4c81-a571-ae663cf251c4"
       },
       "id": "xpsi-pK6mdj4",
       "execution_count": 83,
@@ -748,11 +748,11 @@
         "print(re.findall(gpt2pat, \"Hello world, how're you?\"))"
       ],
       "metadata": {
-        "id": "ReiJY32_wFcl",
-        "outputId": "a57332a7-21b3-40e9-df5d-e77dd946320b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ReiJY32_wFcl",
+        "outputId": "a57332a7-21b3-40e9-df5d-e77dd946320b"
       },
       "id": "ReiJY32_wFcl",
       "execution_count": 86,
@@ -790,11 +790,11 @@
         "print(re.findall(gpt2pat, \"Hello world123, how're y0u?\"))"
       ],
       "metadata": {
-        "id": "xXUI27i54Vg1",
-        "outputId": "8c3e59c5-8afc-4c90-c0ce-f564a7066ba6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xXUI27i54Vg1",
+        "outputId": "8c3e59c5-8afc-4c90-c0ce-f564a7066ba6"
       },
       "id": "xXUI27i54Vg1",
       "execution_count": 89,
@@ -824,11 +824,11 @@
         "print(re.findall(gpt2pat, \"Hello world123, HOW'RE y0u?\"))"
       ],
       "metadata": {
-        "id": "56EovuNX8SYl",
-        "outputId": "9ecec73f-4f40-4b0d-aa89-701132099bc7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "56EovuNX8SYl",
+        "outputId": "9ecec73f-4f40-4b0d-aa89-701132099bc7"
       },
       "id": "56EovuNX8SYl",
       "execution_count": 90,
@@ -880,11 +880,11 @@
         "print(re.findall(gpt2pat, example))"
       ],
       "metadata": {
-        "id": "epNI54C7_WBl",
-        "outputId": "a144c357-0df5-4331-bbe8-9f6976de266e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "epNI54C7_WBl",
+        "outputId": "a144c357-0df5-4331-bbe8-9f6976de266e"
       },
       "id": "epNI54C7_WBl",
       "execution_count": 91,
@@ -951,11 +951,11 @@
         "print(enc_2.encode(\"     Hello world!!!\"))"
       ],
       "metadata": {
-        "id": "wEkaYAIMFxO6",
-        "outputId": "862fd3ba-59dc-4006-819c-f991ae16d166",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wEkaYAIMFxO6",
+        "outputId": "862fd3ba-59dc-4006-819c-f991ae16d166"
       },
       "id": "wEkaYAIMFxO6",
       "execution_count": 94,
@@ -1046,6 +1046,16 @@
         "id": "0h5NyaieIRgH"
       },
       "id": "0h5NyaieIRgH"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To be continued: https://youtu.be/zduSFxRajkE?t=4506"
+      ],
+      "metadata": {
+        "id": "TBNxAiN4YkZb"
+      },
+      "id": "TBNxAiN4YkZb"
     },
     {
       "cell_type": "code",
